--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     margin: 0;
-    background-color: #224870;
+    background-color: #7c4a36;
 }
 
 .container {
@@ -19,7 +19,7 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 75px);
     grid-template-rows: 160px repeat(5, 75px);
-    background-color: #00916e;
+    background-color: #040706;
     padding: 15px;
     border-radius: 32px;
     box-shadow: 15px 10px 0px 5px #00000033;
@@ -32,12 +32,16 @@ button {
     border-radius: 32px;
     font-size: 1.5em;
     border: none;
-    background-color: #00916e;
-    box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
+    background-color: #16318a;
+    box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #bbbbbb23;
+}
+
+.operador{
+    background-color: orange;
 }
 
 button:active {
-    background-color: #006f54;
+    background-color: #bec0c5;
 }
 
 button:focus {
@@ -55,12 +59,12 @@ button:focus {
     margin: 10px 10px 20px;
     flex-direction: column;
     align-items: flex-end;
-    background-color: #363636;
+    background-color: #776c6c;
     border-radius: 32px;
     text-align: right;
     justify-content: space-between;
     word-break: break-all;
-    box-shadow: 0px 0px 0px 10px #00000033;
+    box-shadow: 0px 0px 0px 10px #7a797933;
 }
 
 #valor-actual {
