--- a/style.css
+++ b/style.css
@@ -1,75 +1,75 @@
 * {
-    font-family: 'Fraunces', serif;
-    color: #fff;
+  font-family: "Fraunces", serif;
+  color: #fff;
 }
 
 body {
-    margin: 0;
-    background-color: #7c4a36;
+  margin: 0;
+  background-color: #7c4a36;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calculadora {
-    display: grid;
-    grid-template-columns: repeat(4, 75px);
-    grid-template-rows: 160px repeat(5, 75px);
-    background-color: #040706;
-    padding: 15px;
-    border-radius: 32px;
-    box-shadow: 15px 10px 0px 5px #0000004f;
+  display: grid;
+  grid-template-columns: repeat(4, 75px);
+  grid-template-rows: 160px repeat(5, 75px);
+  background-color: #040706;
+  padding: 15px;
+  border-radius: 32px;
+  box-shadow: 15px 10px 0px 5px #0000004f;
 }
 
 button {
-    cursor: pointer;
-    margin: 5px;
-    padding: 0;
-    border-radius: 32px;
-    font-size: 1.5em;
-    border: none;
-    background-color: #16318a;
+  cursor: pointer;
+  margin: 5px;
+  padding: 0;
+  border-radius: 32px;
+  font-size: 1.5em;
+  border: none;
+  background-color: #16318a;
 }
 
-.operador{
-    background-color: orange;
+.operador {
+  background-color: orange;
 }
 
 button:active {
-    background-color: #000000;
+  background-color: #000000;
 }
 
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 .colm2 {
-    grid-column: span 2;
+  grid-column: span 2;
 }
 
 .display {
-    grid-column: 1 / -1;
-    padding: 16px;
-    display: flex;
-    margin: 10px 10px 20px;
-    flex-direction: column;
-    align-items: flex-end;
-    background-color: #776c6c;
-    border-radius: 32px;
-    text-align: right;
-    justify-content: space-between;
-    word-break: break-all;
-    box-shadow: 0px 0px 0px 10px #7a797933;
+  grid-column: 1 / -1;
+  padding: 16px;
+  display: flex;
+  margin: 10px 10px 20px;
+  flex-direction: column;
+  align-items: flex-end;
+  background-color: #776c6c;
+  border-radius: 32px;
+  text-align: right;
+  justify-content: space-between;
+  word-break: break-all;
+  box-shadow: 0px 0px 0px 10px #7a797933;
 }
 
 #valor-actual {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 #valor-anterior {
-    font-size: 2em;
+  font-size: 2em;
 }
