--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ button {
   border-radius: 32px;
   font-size: 1.5em;
   border: none;
-  background-color: #16318a;
+  background-color: #253e91;
 }
 
 .operador {
@@ -58,7 +58,7 @@ button:focus {
   margin: 10px 10px 20px;
   flex-direction: column;
   align-items: flex-end;
-  background-color: #776c6c;
+  background-color: #998383;
   border-radius: 32px;
   text-align: right;
   justify-content: space-between;
